--- a/css/style.css
+++ b/css/style.css
@@ -108,12 +108,14 @@ html, body, ul, li {
     padding: 5px 10px;
     border-radius: 10px;
 }
-
+/* bloc chapitre */
 .timeline ul li .content h3 {
     padding: 10px 20px;
     background-color: #fffd83;
     margin-bottom: 0;
     text-align: center;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
 }
@@ -125,6 +127,8 @@ html, body, ul, li {
     text-align: center;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
+    border-top-right-radius: 10px ;
+    border-top-left-radius: 10px ;
     text-align: left;
 }
 
