--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 html, body, ul, li {
     margin: 0;
     padding: 0;
-    font-family: 'Nunito', sans-serif;
+    font-family: 'Arial', sans-serif;
     color:#272424;
     background-color: #f1f1f6;
 }
