--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ html, body, ul, li {
 .point {
     min-width: 20px;
     height: 20px;
-    background-color: #f1f1f6;
+    background-color: #333333;
     border-radius: 100%;
     z-index: 2;
     border: 3px #333333 solid;
@@ -105,7 +105,7 @@ html, body, ul, li {
 }
 /* bloc avec les dates */
 .timeline ul li .date h4 {
-    background-color: #fffab7;
+    background-color: #0080ff6c;
     width: 200px;
     text-align: center;
     padding: 5px 10px;
@@ -118,7 +118,7 @@ html, body, ul, li {
 /* bloc chapitre */
 .timeline ul li .content h3 {
     padding: 10px 20px;
-    background-color: #fffd83;
+    background-color: #0080ffa9;
     margin-bottom: 0;
     text-align: center;
     border-bottom-left-radius: 10px;
@@ -129,7 +129,7 @@ html, body, ul, li {
 /* blocs de texte*/
 .timeline ul li .content p {
     padding: 10px 20px;
-    background-color: #fffdd3;
+    background-color: #0080ff66;
     margin-top: 0;
     text-align: center;
     border-bottom-left-radius: 10px;
